# EmanuelLab

./: LICENSE
2P_imaging/abrush2p/: setup.py
2P_imaging/abrush2p/analyze2p/: __init__.py
2P_imaging/abrush2p/analyze2p/preprocessing/: load_ops.py
2P_imaging/abrush2p/analyze2p/util/: a2p_mkdir.py
2P_imaging/abrush2p/env/analyze2p/: analyze2p.yml  pyproject.toml
2P_imaging/scripts/: settings_file.cfg  sort_channels.ipynb  suite2p_script.ipynb
brush-run/: LICENSE  README.md
brush-run/src/: brush_merged_SOL.py  brush_merged_control_panel.py  laser_align.py  settings_file.cfg
brush-run/src/arduino/VariousSpeeds/: VariousSpeeds.ino
brush-run/src/arduino/classical/: classical.ino
brush-run/src/arduino/operant/: operant.ino
mice_behavior/scripts/: all_mice_learning_curves.ipynb  all_mice_speeds.ipynb  trial_schematic.ipynb
